// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MobileMenuButton should match snapshot when closed 1`] = `
<button
  aria-expanded="false"
  aria-label="Open mobile menu"
  class="md:hidden p-2 text-gray-700 hover:text-blue-600 transition-colors "
  type="button"
>
  <svg
    class="w-6 h-6"
    fill="none"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
  >
    <path
      d="M4 6h16M4 12h16M4 18h16"
    />
  </svg>
</button>
`;

exports[`MobileMenuButton should match snapshot when open 1`] = `
<button
  aria-expanded="true"
  aria-label="Close mobile menu"
  class="md:hidden p-2 text-gray-700 hover:text-blue-600 transition-colors "
  type="button"
>
  <svg
    class="w-6 h-6"
    fill="none"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
  >
    <path
      d="M6 18L18 6M6 6l12 12"
    />
  </svg>
</button>
`;
